--- a/blender-today/application/templates/posts/_macros.html
+++ b/blender-today/application/templates/posts/_macros.html
@@ -1,61 +1,66 @@
 {% macro print_comment(comment, loop, post, is_reply=False) %}
 	<a name="comment-{{comment.id}}"></a>
 	<div class="post-view-comments-item {% if is_reply %}reply{% endif %} {{ loop.cycle('odd', 'even') }}">
-		<div class="row">
 
-			<div class="col-md-1 col-sm-1 col-xs-2">
-				<div class="post-view-comments-avatar">
-					<img class="img-circle{% if post.user.id == comment.user.id %} op{% endif %}" src="{{comment.user.gravatar()}}" title="{{comment.user.first_name}} {{comment.user.last_name}}">
+		<div class="post-view-comments-avatar">
+			<img class="img-circle{% if post.user.id == comment.user.id %} op{% endif %}" src="{{comment.user.gravatar()}}" title="{{comment.user.first_name}} {{comment.user.last_name}}">
 
-					{% if comment.user.has_role('dev_core') %}
-						<div class="post-view-comments-avatar-label">
-							<i class="dev_core bf-blender" title="Blender Core Developer"></i>
-						</div>
-					{% elif comment.user.has_role('bfct_trainer') %}
-						<div class="post-view-comments-avatar-label">
-							<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
-						</div>
-					{% elif comment.user.has_role('network_member') %}
-						<div class="post-view-comments-avatar-label">
-							<i class="network_member bf-network" title="Blender Network Member"></i>
-						</div>
-					{% elif comment.user.has_role('cloud_member') %}
-						<div class="post-view-comments-avatar-label">
-							<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
-						</div>
-					{% endif %}
+			{% if comment.user.has_role('dev_core') %}
+				<div class="post-view-comments-avatar-label">
+					<i class="dev_core bf-blender" title="Blender Core Developer"></i>
 				</div>
-			</div>
+			{% elif comment.user.has_role('bfct_trainer') %}
+				<div class="post-view-comments-avatar-label">
+					<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
+				</div>
+			{% elif comment.user.has_role('network_member') %}
+				<div class="post-view-comments-avatar-label">
+					<i class="network_member bf-network" title="Blender Network Member"></i>
+				</div>
+			{% elif comment.user.has_role('cloud_member') %}
+				<div class="post-view-comments-avatar-label">
+					<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
+				</div>
+			{% endif %}
+		</div>
 
-			<div class="col-md-11 col-sm-11 col-xs-10">
-				<div class="post-view-comments-item-content">
-					{{comment.content|safe}}
-				</div>
-				<div class="post-view-comments-item-details">
-					<a class="post-view-comments-item-rate comment-up up{% if comment.user_rating and comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='1')}}" title="Upvote this comment">
-						<i class="fa fa-chevron-up"></i>
-					</a>
-					<a class="post-view-comments-item-rate down{% if comment.user_rating and not comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='0')}}" title="Downvote this comment">
-						<i class="fa fa-chevron-down"></i>
-					</a>
-					<span class="separator"></span>
-					<span class="rating" title="Comment Points">{{comment.rating_delta}}</span>
-					<span class="separator"></span>
-					<span title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{comment.pretty_creation_date}}</span>
-					<small>by</small> {{comment.user.first_name}} {{comment.user.last_name}}
-					<span class="separator"></span>
-					<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}#comment-{{comment.id}}" title="Permalink"><i class="fa fa-link"></i></a>
-					<span class="separator"></span>
-					<a class="post-view-comments-item-flag flag{% if comment.user_rating and comment.user_rating.is_flagged %} flagged{% endif %}" href="{{url_for('comments.flag', comment_id=comment.id)}}" title="Flag comment">
-					</a>
-					{% if not is_reply %}
-					<span class="separator"></span>
-					<a comment="{{comment.id}}"  class="post-comment-reply" href="{{url_for('comments.submit', post_id=post.id)}}" title="Reply to this comment">reply
-					</a>
-					{%endif %} 
-				</div>
-			</div>
-		</div> <!-- row -->
+		<div class="post-view-comments-item-content">
+			{{comment.content|safe}}
+		</div>
+
+		<div class="post-view-comments-item-details">
+			<a class="post-view-comments-item-rate comment-up up{% if comment.user_rating and comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='1')}}" title="Upvote this comment">
+				<i class="fa fa-chevron-up"></i>
+			</a>
+			<a class="post-view-comments-item-rate down{% if comment.user_rating and not comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='0')}}" title="Downvote this comment">
+				<i class="fa fa-chevron-down"></i>
+			</a>
+			<span class="separator"></span>
+			<span class="rating" title="Comment Points">{{comment.rating_delta}}</span>
+			<span class="separator"></span>
+			<span title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{comment.pretty_creation_date}}</span>
+
+			<small>by</small>
+
+			{% if post.user.deleted %}
+				<span class="deleted" title="This account no longer exists">[deleted]</span>
+			{% else %}
+				{{comment.user.username}}
+			{% endif %}
+
+			<span class="separator"></span>
+			<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}#comment-{{comment.id}}" title="Permalink"><i class="fa fa-link"></i></a>
+			<span class="separator"></span>
+			<a class="post-view-comments-item-flag flag{% if comment.user_rating and comment.user_rating.is_flagged %} flagged{% endif %}" href="{{url_for('comments.flag', comment_id=comment.id)}}" title="Flag comment">
+			</a>
+			{% if not is_reply %}
+			<span class="separator"></span>
+			<a comment="{{comment.id}}"  class="post-comment-reply" href="{{url_for('comments.submit', post_id=post.id)}}" title="Reply to this comment">reply
+			</a>
+			{%endif %} 
+		</div>
+
+		<div class="clearfix"></div>
 	</div> <!-- post-view-comments-item -->
 {% endmacro %}
 
