--- a/blender-today/application/templates/posts/_macros.html
+++ b/blender-today/application/templates/posts/_macros.html
@@ -3,24 +3,28 @@
 	<div class="post-view-comments-item {% if is_reply %}reply{% endif %} {{ loop.cycle('odd', 'even') }}">
 
 		<div class="post-view-comments-avatar">
-			<img class="img-circle{% if post.user.id == comment.user.id %} op{% endif %}" src="{{comment.user.gravatar()}}" title="{{comment.user.first_name}} {{comment.user.last_name}}">
+			{% if comment.user.deleted %}
+				<span class="post-view-comments-avatar-deleted"></span>
+			{% else %}
+				<img class="img-circle{% if post.user.id == comment.user.id %} op{% endif %}" src="{{comment.user.gravatar()}}" title="{{comment.user.first_name}} {{comment.user.last_name}}">
 
-			{% if comment.user.has_role('dev_core') %}
-				<div class="post-view-comments-avatar-label">
-					<i class="dev_core bf-blender" title="Blender Core Developer"></i>
-				</div>
-			{% elif comment.user.has_role('bfct_trainer') %}
-				<div class="post-view-comments-avatar-label">
-					<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
-				</div>
-			{% elif comment.user.has_role('network_member') %}
-				<div class="post-view-comments-avatar-label">
-					<i class="network_member bf-network" title="Blender Network Member"></i>
-				</div>
-			{% elif comment.user.has_role('cloud_member') %}
-				<div class="post-view-comments-avatar-label">
-					<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
-				</div>
+				{% if comment.user.has_role('dev_core') %}
+					<div class="post-view-comments-avatar-label">
+						<i class="dev_core bf-blender" title="Blender Core Developer"></i>
+					</div>
+				{% elif comment.user.has_role('bfct_trainer') %}
+					<div class="post-view-comments-avatar-label">
+						<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
+					</div>
+				{% elif comment.user.has_role('network_member') %}
+					<div class="post-view-comments-avatar-label">
+						<i class="network_member bf-network" title="Blender Network Member"></i>
+					</div>
+				{% elif comment.user.has_role('cloud_member') %}
+					<div class="post-view-comments-avatar-label">
+						<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
+					</div>
+				{% endif %}
 			{% endif %}
 		</div>
 
@@ -29,10 +33,22 @@
 		</div>
 
 		<div class="post-view-comments-item-details">
-			<a class="post-view-comments-item-rate comment-up up{% if comment.user_rating and comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='1')}}" title="Upvote this comment">
+			{# 
+				- If the comment has user_rating, and is_positive, we add the class "rated"
+				- If the current user is_anonymous, we add the class popover to show a nice tooltip
+			#}
+			<a class="post-view-comments-item-rate comment-up up{% if comment.user_rating and comment.user_rating.is_positive %} rated{% endif %}{% if current_user.is_anonymous() %} popover-comment-vote{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='1')}}" title="Upvote this comment"
+				 {% if current_user.is_anonymous() %}
+						data-toggle="popover" data-trigger="hover" data-placement="bottom"
+						data-content="Sign in to vote"
+				 {% endif %}>
 				<i class="fa fa-chevron-up"></i>
 			</a>
-			<a class="post-view-comments-item-rate down{% if comment.user_rating and not comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='0')}}" title="Downvote this comment">
+			<a class="post-view-comments-item-rate down{% if comment.user_rating and not comment.user_rating.is_positive %} rated{% endif %}{% if current_user.is_anonymous() %} popover-comment-vote{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='0')}}" title="Downvote this comment"
+				 {% if current_user.is_anonymous() %}
+						data-toggle="popover" data-trigger="hover" data-placement="bottom"
+						data-content="Sign in to vote"
+				 {% endif %}>
 				<i class="fa fa-chevron-down"></i>
 			</a>
 			<span class="separator"></span>
@@ -42,7 +58,7 @@
 
 			<small>by</small>
 
-			{% if post.user.deleted %}
+			{% if comment.user.deleted %}
 				<span class="deleted" title="This account no longer exists">[deleted]</span>
 			{% else %}
 				{{comment.user.username}}
@@ -50,13 +66,24 @@
 
 			<span class="separator"></span>
 			<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}#comment-{{comment.id}}" title="Permalink"><i class="fa fa-link"></i></a>
+
+			{# Only show flag if we're logged in and the comment's author exists #}
+			{% if current_user.is_authenticated() and not comment.user.deleted %}
 			<span class="separator"></span>
 			<a class="post-view-comments-item-flag flag{% if comment.user_rating and comment.user_rating.is_flagged %} flagged{% endif %}" href="{{url_for('comments.flag', comment_id=comment.id)}}" title="Flag comment">
 			</a>
+			{% endif %}
+
 			{% if not is_reply %}
-			<span class="separator"></span>
-			<a comment="{{comment.id}}"  class="post-comment-reply" href="{{url_for('comments.submit', post_id=post.id)}}" title="Reply to this comment">reply
-			</a>
+				<span class="separator"></span>
+				{% if current_user.is_authenticated() %}
+					<a comment="{{comment.id}}"  class="post-comment-reply" href="{{url_for('comments.submit', post_id=post.id)}}" title="Reply to this comment">reply
+					</a>
+				{% else%}
+					<a href="{{url_for_security('login')}}" class="popover-comment-reply"
+						 data-toggle="popover" data-trigger="hover" data-placement="bottom"
+						 data-content="Sign in to reply">reply</a>
+				{% endif %}
 			{%endif %} 
 		</div>
 
