Use non-light fonts for some titles

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -329,9 +329,12 @@ a
 	display: block
 	font-family: $font_headings
 	font-size: 2em
+	font-weight: lighter
 	padding: 30px 15px 25px 15px
 	line-height: 1.3em
-	+text-shadow(1px, 1px, 0, darken($color_background, 3%), 1.0)
+
+	//+text-shadow(1px, 1px, 0, darken($color_background, 3%), 1.0)
+
 	+media-xs
 		font-size: 1.8em
 		padding: 15px 0 15px 15px
