--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -744,6 +744,7 @@ a
 
 .post-view-comments .title
 	font-family: $font_headings
+	font-weight: lighter
 	padding: 30px 0 15px 15px
 	margin: 0
 	+user-select-none
@@ -927,6 +928,8 @@ div#post-comment-reply-container
 	width: 100%
 	padding: 15px 15px 25px 15px
 	margin: 0
+	& h3
+		font-weight: lighter
 
 .post-view-comments-empty
 	font-size: 1.2em
@@ -1065,6 +1068,8 @@ div#post-comment-reply-container
 	margin-top: 25px
 	+media-xs
 		margin-top: 15px
+	& h3, & h2
+		font-weight: lighter
 
 .user-login-container,
 .user-register-container
