--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -158,7 +158,7 @@ a
 	display: block
 	font-size: 1.6em
 	padding: 15px 0 5px 0
-	+text-shadow(1px, 1px, 0, darken($color_background, 3%), 0.5)
+	//+text-shadow(1px, 1px, 0, darken($color_background, 3%), 0.5)
 
 	+media-xs
 		float: left
