--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -136,7 +136,7 @@ a
 	padding: 0
 	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 	&.even
 		//background-color:	lighten($color_background, 1%)
 		background-color: lighten($color_background, 2%)
@@ -323,7 +323,7 @@ a
 	background-color: white
 	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 
 .post-view-title
 	display: block
@@ -1056,7 +1056,7 @@ div#post-comment-reply-container
 	padding: 0
 	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 
 	& .page-view-content
 		padding: 15px
@@ -1077,7 +1077,7 @@ div#post-comment-reply-container
 	border: thin solid darken($color_background, 3%)
 	text-align: center
 	+border-radius(3px)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 
 	& .user-login-branding,
 	& .user-register-branding
@@ -1547,7 +1547,7 @@ fieldset
 	background-color: white
 	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 
 .nav-sidebar p
 	padding: 10px 20px
@@ -1866,8 +1866,8 @@ a.cke_button_on, a.cke_button_on:hover, a.cke_button_on:focus, a.cke_button_on:a
 	width: 100%
 	height: 40px
 	line-height: 40px
-	color: #999
-	font-weight: 700
+	color: $color_brand_main
+	font-weight: lighter
 	font-size: 16px
 	background: #fff
 	display: block
@@ -1877,7 +1877,7 @@ a.cke_button_on, a.cke_button_on:hover, a.cke_button_on:focus, a.cke_button_on:a
 	font-family: $font_headings
 	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 	+media-xs
 		width: auto
 
