--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1578,13 +1578,14 @@ fieldset
 		font-family: $font_headings
 		display: block
 		font-size: 1.5em
+		font-weight: lighter
 		margin: 0
 		padding: 10px 0 0 0
 		color: $color_brand_main
 		position: relative
 		+user-select-none
 		+pointer-events-none
-		+text-shadow(1px, 1px, 0, darken($color_background, 3%), 1.0)
+		+text-shadow(1px, 1px, 0, darken($color_background, 1%), 1.0)
 
 		& small
 			position: relative
