--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -68,34 +68,20 @@
 
 						<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
 
-							{% if post.picture %}
-							<span class="post-index-item-picture-collapse"><i class="fa fa-minus"></i></span>
-							<span class="post-index-item-picture-expand"><i class="fa fa-picture-o"></i></span>
-							<img class="post-index-item-picture"
-									 title="Click and drag to resize"
-									 data-rel="{{post.thumbnail('l')}}" src=""/>
-							<span class="separator"></span>
-							{% endif %}
-
 							<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}" class="post-index-item-details-type">
-								<span class="hidden-xs">
-									{{post.post_type}}
-								</span>
-								<span class="visible-xs">
-									{% if post.post_type.url == 'link' %}
-										<i class="fa fa-link"></i>
-									{% elif post.post_type.url == 'text' %}
-										<i class="fa fa-file-text-o"></i>
-									{% endif %}
-								</span>
+								{{post.post_type}}
 							</a>
+
 							<span class="separator"></span>
+
 							<a href="{{url_for('index')}}{{post.category.url}}">{{post.category}}</a>
+
 							<span class="separator"></span>
+
 							<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}#comments" class="post-index-item-details-comments">
 								<span class="hidden-xs">
 								{% if post.comments_count == 0 %}
-									comment
+									Comment
 								{% elif post.comments_count == 1 %}
 									1 comment
 								{% else %}
@@ -119,6 +105,16 @@
 							{% else %}
 								{{post.user.username}}
 							{% endif %}
+
+							{% if post.picture %}
+
+							<span class="post-index-item-picture-collapse"><i class="fa fa-minus-square-o"></i></span>
+							<span class="post-index-item-picture-expand"><i class="fa fa-plus-square-o"></i></span>
+							<img class="post-index-item-picture"
+									 title="Click and drag to resize"
+									 data-rel="{{post.thumbnail('l')}}" src=""/>
+							{% endif %}
+
 						</div>
 						<div class="clearfix"></div>
 					</div> <!-- post-index-item -->
