--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -29,6 +29,14 @@
 						</li>
 
 						<li>
+								<a href="{{url_for('index')}}u/{{current_user.id}}" id="popover-profile"
+									 data-toggle="popover" data-trigger="hover" data-placement="bottom"
+									 data-content="Profile">
+									 <i class="fa fa-male"></i>
+								</a>
+						</li>
+
+						<li>
 								<a href="{{url_for('settings.profile')}}" id="popover-settings"
 									 data-toggle="popover" data-trigger="hover" data-placement="bottom"
 									 data-content="Settings" {% if title in ('settings_profile', 'settings_account') %}class="active"{% endif %}>
