--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -1,171 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="google-site-verification" content="{{config.GOOGLE_SITE_VERIFICATION}}" />
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block page_title %}{% endblock %}Blender Today - Community-driven Blender News</title>
-    <meta name="keywords" content="news, community, blender, animation, 3d" />
-    <meta name="description" content="Community-driven Blender News"/>
-    <meta name="author" content="Blender Today"/>
-    <meta name="theme-color" content="#4D84A0">
-    <meta name="csrf-token" content="{{ csrf_token() }}">
+<html lang="en" prefix="og: http://ogp.me/ns#">
+	<head>
+		<meta name="google-site-verification" content="{{config.GOOGLE_SITE_VERIFICATION}}" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>{% block page_title %}{% endblock %}Blender Today - Community-driven Blender News</title>
+		<meta name="keywords" content="news, community, blender, animation, 3d" />
+		<meta name="description" content="Community-driven Blender News"/>
+		<meta name="author" content="Blender Today"/>
+		<meta name="theme-color" content="#4D84A0">
+		<meta name="csrf-token" content="{{ csrf_token() }}">
+		<meta property="og:site_name" content="Blender.Today" />
+		{% block og %}
+		{% endblock %}
 
-    {% if config.USE_ASSETS_CDN %}
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Oxygen:300,400' rel='stylesheet' type='text/css'>
-    {% else %}
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
-    {% endif %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+		{% if config.USE_ASSETS_CDN %}
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Oxygen:300,400' rel='stylesheet' type='text/css'>
+		{% else %}
+		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+		<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
+		{% endif %}
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
-    <!-- IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+		<!-- IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
-    <link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='images/favicon_192x192.png') }}">
+		<link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
+		<link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='images/favicon_192x192.png') }}">
 
-    {% block header %}
-    {% endblock %}
-  </head>
+		{% block header %}
+		{% endblock %}
+	</head>
 
-  <body>
-    {% block modal %}
-    {% endblock %}
-    <a name="hop"></a>
+	<body>
+		{% block modal %}
+		{% endblock %}
+		<a name="hop"></a>
 
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-      <div class="container">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert"><i class="fa fa-times"></i></button>
-      </div>
-    </div>
-    {% endfor %}
+		{% for message in get_flashed_messages() %}
+		<div class="alert alert-warning">
+			<div class="container">
+				{{ message }}
+				<button type="button" class="close" data-dismiss="alert"><i class="fa fa-times"></i></button>
+			</div>
+		</div>
+		{% endfor %}
 
-    <div class="page-container">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            {% block body %}{% endblock %}
-          </div> <!-- col -->
-        </div><!-- row -->
-      </div> <!-- container -->
-    </div> <!-- page-container -->
+		<div class="page-container">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						{% block body %}{% endblock %}
+					</div> <!-- col -->
+				</div><!-- row -->
+			</div> <!-- container -->
+		</div> <!-- page-container -->
 
-    <div class="container">
-      <div class="row page-footer">
-        <div class="col-md-6">
-          <h3>About</h3>
-          <p>
-            In a nutshell, Blender.Today is community-driven <a href="http://www.blender.org">Blender</a> news.
-          </p>
-          <p>
-            If you don't know what <a href="http://www.blender.org">Blender</a> is,
-            then you should probably go, or not! Stay and hangout, we have cookies.
-            Just keep in mind this site is run by the community. You're free to share
-            what's up, upvote the awesomeness or even downvote if it's not your thing.
-          </p>
-          <p>
-            Go share. It's time for you to decide what makes the news.
-          </p>
-        </div>
-        <div class="col-md-6">
-          <h3>Contact</h3>
-          <p>
-            We're on Twitter <a href="http://twitter.com/BlenderToday">@BlenderToday</a>,
-            or <a href="http://facebook.com/BlenderToday">Facebook</a> too, if you're into that.
-          </p>
-          <hr/>
-          <h3>Moar Blender Stuff</h3>
-          <ul>
-            <li><a href="https://cloud.blender.org">Blender Cloud</a>
-                - All the open content and training you ever wanted</li>
-            <li><a href="https://www.blendernetwork.org">Blender Network</a>
-                 - Online directory of Blender Professionals and Certified Trainers</li>
-            <li><a href="https://www.blender.org/e-shop">Blender E-shop</a>
-                 - Education & swag deals that keep Blender Foundation afloat</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+		<div class="container">
+			<div class="row page-footer">
+				<div class="col-md-6">
+					<h3>About</h3>
+					<p>
+						In a nutshell, Blender.Today is community-driven <a href="http://www.blender.org">Blender</a> news.
+					</p>
+					<p>
+						If you don't know what <a href="http://www.blender.org">Blender</a> is,
+						then you should probably go, or not! Stay and hangout, we have cookies.
+						Just keep in mind this site is run by the community. You're free to share
+						what's up, upvote the awesomeness or even downvote if it's not your thing.
+					</p>
+					<p>
+						Go share. It's time for you to decide what makes the news.
+					</p>
+				</div>
+				<div class="col-md-6">
+					<h3>Contact</h3>
+					<p>
+						We're on Twitter <a href="http://twitter.com/BlenderToday">@BlenderToday</a>,
+						or <a href="http://facebook.com/BlenderToday">Facebook</a> too, if you're into that.
+					</p>
+					<hr/>
+					<h3>Moar Blender Stuff</h3>
+					<ul>
+						<li><a href="https://cloud.blender.org">Blender Cloud</a>
+								- All the open content and training you ever wanted</li>
+						<li><a href="https://www.blendernetwork.org">Blender Network</a>
+								 - Online directory of Blender Professionals and Certified Trainers</li>
+						<li><a href="https://www.blender.org/e-shop">Blender E-shop</a>
+								 - Education & swag deals that keep Blender Foundation afloat</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
-    <footer>
-      <div class="container">
-          <a href="{{url_for('about')}}">About</a>
-          · <a href="{{url_for('faq')}}">FAQ</a>
-          · <a href="{{url_for('terms')}}">Terms</a>
-          · Made with <i class="fa fa-heart-o"></i> in Amsterdam
-          · Blender Today 2015
-          · Cutest mug by <a href="http://www.manujarvinen.com/" target="_blank">Manu</a>,
-            404 by <a href="http://www.artificial3d.com/" target="_blank">Andy</a>
-      </div> <!-- /footer-container -->
-    </footer>
-
-
-    <div id="submit" class="dialog">
-      <div class="dialog__overlay"></div>
-      <div class="dialog__content">
-        {% include 'posts/form.html' %}
-        <button class="action dialog__button-close" data-dialog-close>
-          <i class="fa fa-times"></i>
-        </button>
-      </div> <!-- dialog__content -->
-    </div> <!-- dialog -->
+		<footer>
+			<div class="container">
+					<a href="{{url_for('about')}}">About</a>
+					· <a href="{{url_for('faq')}}">FAQ</a>
+					· <a href="{{url_for('terms')}}">Terms</a>
+					· Made with <i class="fa fa-heart-o"></i> in Amsterdam
+					· Blender Today 2015
+					· Cutest mug by <a href="http://www.manujarvinen.com/" target="_blank">Manu</a>,
+						404 by <a href="http://www.artificial3d.com/" target="_blank">Andy</a>
+			</div> <!-- /footer-container -->
+		</footer>
 
 
-    {% if config.USE_ASSETS_CDN %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-    {% endif %}
+		<div id="submit" class="dialog">
+			<div class="dialog__overlay"></div>
+			<div class="dialog__content">
+				{% include 'posts/form.html' %}
+				<button class="action dialog__button-close" data-dialog-close>
+					<i class="fa fa-times"></i>
+				</button>
+			</div> <!-- dialog__content -->
+		</div> <!-- dialog -->
 
-    <script type="text/javascript">
-      $('.nav-logout-widget').click(function(e){
-        e.preventDefault();
 
-        $('.nav-logout-widget-question').animate({'opacity': 1.0, 'left' : 22}, 300);
-        $('.nav-logout-widget-icon').css('color', 'crimson');
-        $('.nav-logout-widget-icon').animate({'left' : 5}, 250, function(){
-          $('.nav-logout-widget').unbind();
-          $('.nav-logout-widget').attr('href', '{{url_for("logout")}}');
-        });
-      });
-    </script>
+		{% if config.USE_ASSETS_CDN %}
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+		{% endif %}
 
-    <script src="{{url_for('static', filename='js/theuniverse.min.js')}}"></script>
-    <script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
-    <script type="text/javascript">
-      {% if current_user.is_anonymous() %}
-        $('.popover-submit').popover();
-      {% else %}
-        $('#popover-settings').popover();
-        $('#popover-logout').popover();
-      {% endif %}
-      $('#popover-home').popover();
-      $( function() {$( '#cd-dropdown' ).dropdown( {gutter : 5 } );
-      });
-    </script>
+		<script type="text/javascript">
+			$('.nav-logout-widget').click(function(e){
+				e.preventDefault();
 
-  {% block footer_scripts %}
-  {% endblock %}
+				$('.nav-logout-widget-question').animate({'opacity': 1.0, 'left' : 22}, 300);
+				$('.nav-logout-widget-icon').css('color', 'crimson');
+				$('.nav-logout-widget-icon').animate({'left' : 5}, 250, function(){
+					$('.nav-logout-widget').unbind();
+					$('.nav-logout-widget').attr('href', '{{url_for("logout")}}');
+				});
+			});
+		</script>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		<script src="{{url_for('static', filename='js/theuniverse.min.js')}}"></script>
+		<script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
+		<script type="text/javascript">
+			{% if current_user.is_anonymous() %}
+				$('.popover-submit').popover();
+			{% else %}
+				$('#popover-settings').popover();
+				$('#popover-logout').popover();
+			{% endif %}
+			$('#popover-home').popover();
+			$( function() {$( '#cd-dropdown' ).dropdown( {gutter : 5 } );
+			});
+		</script>
 
-      ga('create', '{{config.GOOGLE_ANALYTICS_TRACKING_ID}}', 'auto');
-      ga('require', 'displayfeatures');
-      ga('send', 'pageview');
-    </script>
-  </body>
+	{% block footer_scripts %}
+	{% endblock %}
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', '{{config.GOOGLE_ANALYTICS_TRACKING_ID}}', 'auto');
+			ga('require', 'displayfeatures');
+			ga('send', 'pageview');
+		</script>
+	</body>
 </html>
 
