--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -12,6 +12,7 @@
 		<meta name="theme-color" content="#4D84A0">
 		<meta name="csrf-token" content="{{ csrf_token() }}">
 		<meta property="og:site_name" content="Blender.Today" />
+		<meta property="og:description" content="Community-driven Blender News" />
 		{% block og %}
 		{% endblock %}
 
