--- a/blender-today/application/templates/pages/view.html
+++ b/blender-today/application/templates/pages/view.html
@@ -1,4 +1,16 @@
 {% extends 'layout.html' %}
+
+{% block og %}
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Blender.Today" />
+	<meta property="og:url" content="http://blender.today" />
+	<meta property="og:image" content="{{ url_for('static', filename='images/favicon_192x192.png') }}" />
+{% endblock %}
+
+{% block page_title %}
+	{{title}} - 
+{% endblock%}
+
 {% block body %}
 <div class="row">
    <div class="col-md-9">
